cross cookie with xss, add base handle function has_permission

--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -13,7 +13,7 @@
 
 {% block body %}
 <div class="lixian-box">
-  <a href="{{ options.cross_userscript or static_url(options.cross_userscript) }}" target="_blank" class="cross-cookie{% if handler.disabled_userjs() %} hidden{% end %}" data-site="{{ options.cross_cookie_url }}" data-cookie="{{ cookie }}" data-version="{{ options.cross_cookie_version }}">您尚未安装或需要升级 cross-cookie 点击前往UserScript.org安装</a>
+  <!--<a href="{{ options.cross_userscript or static_url(options.cross_userscript) }}" target="_blank" class="cross-cookie{% if handler.disabled_userjs() %} hidden{% end %}" data-site="{{ options.cross_cookie_url }}" data-cookie="{{ cookie }}" data-version="{{ options.cross_cookie_version }}">您尚未安装或需要升级 cross-cookie 点击前往UserScript.org安装</a>-->
 
   <div class="task-info">
     <div class="task-name">{{ task.taskname }}</div>
@@ -104,7 +104,7 @@
   }
 
   function get_cookie() {
-    return $(".cross-cookie").attr("data-cookie").split(";")[0];
+    return "{{ cookie }}".split(";")[0];
   }
 
   var alpha = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
@@ -186,5 +186,6 @@
     return false;
   });
   {% end %}
+  {% include xss.js %}
 </script>
 {% end %}
