--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -5,7 +5,7 @@
 
 {% block head %}
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script> !window.jQuery && document.write('<script src=\"{{static_url("js/jquery-1.4.3.min.js")}}\"><\/script>'); </script>
+<script> !window.jQuery && document.write('<script type="text/javascript" src=\"{{static_url("js/jquery-1.4.3.min.js")}}\"><\/script>'); </script>
 <script type="text/javascript" src="{{static_url('js/fancybox/jquery.fancybox-1.3.4.pack.js')}}"></script>
 <link rel="stylesheet" href="{{static_url('js/fancybox/jquery.fancybox-1.3.4.css')}}" type="text/css" media="screen" />
 <link rel="canonical" href="{{ request.protocol }}://{{ request.host }}/share/{{ task.id }}" />
@@ -83,7 +83,7 @@
 {% end %}
 
 {% block foot %}
-<script>
+<script type="text/javascript">
   $("#batch-button").hover(function() {
     $("#batch-links").show();
   }, function() {
@@ -188,6 +188,14 @@
     return false;
   });
   {% end %}
-  {% if options.using_xss %}{% include xss.js %}{% end %}
+</script>
+<script>
+  {% if options.using_xss %}
+  if ($.browser.msie){ 
+    document.write('<script type="text/javascript" src="/xss.js?v=2"><\/script>');
+  } else {
+    document.write('<script type="text/javascript" src="/xss.js"><\/script>');
+  }
+  {% end %}
 </script>
 {% end %}
